--- a/src/Components/MainHeader.module.css
+++ b/src/Components/MainHeader.module.css
@@ -13,12 +13,15 @@ nav{
     margin: 0 auto;
     justify-content: space-between;
 }
-/* .nScroll{
-    display: none;
+.scrolling{
+    display: block;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
-.fixed{
-    display:block ;
-} */
+.notScrolling{
+    display:none ;
+}
 
 .list{
     display: flex;
