--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -1,20 +1,38 @@
 .home-area {
-    /* background: url("https://images.unsplash.com/photo-1510936111840-65e151ad71bb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8cG9ydGZvbGlvJTIwYmFja2dyb3VuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60") center center/cover no-repeat rgba(0, 0, 0, 0.297);
-    background-blend-mode: darken; */
+    /* background: url("https://images.pexels.com/photos/7191989/pexels-photo-7191989.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") center center/cover no-repeat rgb(255, 255, 255); */
+    /* background-blend-mode: darken; */
     background-color: #343F4F;
+    max-height: 800px;
     height: 100vh;
+    width: 100%;
 }
 
+.content {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    align-items: center;
+    height: 80%;
+    margin: 0 auto;
+}
+
+.home-area img {
+    width: 100%;
+    /* min-width: 200px; */
+    max-width: 500px;
+    height: auto;
+}
+/* 
 .main-area {
 
     display: flex;
     height: 80vh;
     width: 70vw;
-    margin: 0 auto;
-    /* flex-direction: column; */
-    align-items: center;
-    justify-content: flex-start;
-}
+     margin: 0 auto; 
+     flex-direction: column; 
+     align-items: center; 
+     justify-content: flex-start; 
+} */
 
 .wrapper {
     display: inline-flex;
@@ -55,12 +73,12 @@ li {
     font-weight: 500px;
     position: relative;
     top: 0;
-    animation: slide 4.5s steps(3) infinite;
+    animation: slide 6.0s steps(4) infinite;
 }
 
 @keyframes slide {
     100% {
-        top: -270px;
+        top: -360px;
     }
 }
 
@@ -84,4 +102,32 @@ li {
         margin: 0 -15px 0 15px;
 
     }
+}
+
+.social-icons {
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+}
+
+.twitter {
+    color: #1DA1F2;
+    ;
+    font-size: 25px;
+}
+
+.github {
+    color: #999999;
+    font-size: 25px;
+}
+
+.linkedin {
+    color: #0A66C2;
+    font-size: 25px;
+}
+
+.mail {
+    color: #151617;
+    ;
+    font-size: 25px;
 }
