--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -1,9 +1,9 @@
 .home-area {
     /* background: url("https://images.pexels.com/photos/7191989/pexels-photo-7191989.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") center center/cover no-repeat rgb(255, 255, 255); */
     /* background-blend-mode: darken; */
-    background-color: #343F4F;
+    background-color: whitesmoke;
     max-height: 800px;
-    height: 100vh;
+    height: 100VH;
     width: 100%;
 }
 
@@ -22,17 +22,33 @@
     max-width: 500px;
     height: auto;
 }
-/* 
+
+.textarea{
+    display: flex;
+    flex-direction: column;
+}
+.textarea span{
+    font-size: 27px;
+}
+.textarea .name{
+    font-size: 85px;
+    font-weight: 600;
+}
 .main-area {
 
     display: flex;
-    height: 80vh;
-    width: 70vw;
-     margin: 0 auto; 
-     flex-direction: column; 
-     align-items: center; 
-     justify-content: flex-start; 
-} */
+    flex-direction: column;
+    height: 60vh;
+    justify-content: center;
+    /* width: 70vw; */
+     /* margin: 0 auto;  */
+     /* flex-direction: column;  */
+     /* align-items: center;  */
+     /* justify-content: flex-start;  */
+}
+.main-area div{
+margin-bottom: 10px;
+}
 
 .wrapper {
     display: inline-flex;
@@ -48,12 +64,14 @@ li {
 }
 
 .static-txt {
-    color: white;
-    font-size: 60px;
+    color: black;
+    font-size: 44px;
     font-weight: 400px;
     /* font-size: ; */
 }
-
+.student{
+    margin-top: -2px;
+}
 .dynamic-txt {
     height: 75px;
     line-height: 75px;
@@ -69,16 +87,16 @@ li {
 
 .dynamic-txt li span {
     color: #FC6D6D;
-    font-size: 60px;
+    font-size: 44px;
     font-weight: 500px;
     position: relative;
     top: 0;
-    animation: slide 6.0s steps(4) infinite;
+    animation: slide 4.5s steps(3) infinite;
 }
 
 @keyframes slide {
     100% {
-        top: -360px;
+        top: -270px;
     }
 }
 
@@ -89,7 +107,7 @@ li {
     padding-bottom: 12px;
     width: 100%;
     left: 0;
-    background: #343F4F;
+    background: whitesmoke;
     border-left: 2px solid #fc6d6d;
     animation: typing 1.5s steps(10) infinite;
 }
@@ -99,7 +117,7 @@ li {
 @keyframes typing {
     100% {
         left: 100%;
-        margin: 0 -15px 0 15px;
+        margin: 0 -13px 0 13px;
 
     }
 }
@@ -130,4 +148,16 @@ li {
     color: #151617;
     ;
     font-size: 25px;
+}
+
+.hireButton button{
+    background: crimson;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    /* margin-top: 20px; */
+    font-weight: 400;
+    border-radius: 6px;
+    cursor: pointer;
+    border: 2px solid crimson;
 }
