--- a/src/Components/MainHeader.module.css
+++ b/src/Components/MainHeader.module.css
@@ -1,12 +1,18 @@
-*{
+* {
     font-size: 20px;
     font-weight: bold;
 }
-nav{
+
+nav {
     background-color: crimson;
     color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
-.navbar{
+
+.navbar {
     display: flex;
     height: 60px;
     align-items: center;
@@ -14,25 +20,28 @@ nav{
     margin: 0 auto;
     justify-content: space-between;
 }
-.scrolling{
+
+.scrolling {
     display: block;
     position: fixed;
     width: 100%;
     top: 0;
 }
-.notScrolling{
-    display:none ;
+
+.notScrolling {
+    display: none;
 }
 
-.list{
+.list {
     display: flex;
 }
 
-.navbar-nav{
+.navbar-nav {
     /* display: flex; */
     /* margin: 0 auto ; */
 }
-.list li{
+
+.list li {
     margin: 0 20px;
 }
 
