--- a/src/Components/MainHeader.module.css
+++ b/src/Components/MainHeader.module.css
@@ -4,15 +4,77 @@
 }
 
 nav {
-    background-color: crimson;
-    color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    background-color: white;
 }
 
-.navbar {
+.navBurger {
+    position: fixed;
+    top: 10px;
+    margin: 0 5% 0 95%;
+    color: white;
+    cursor: pointer;
+}
+
+.navBurger .burgerIcon {
+    font-size: 40px;
+    cursor: pointer;
+    color: black;
+    background: white;
+    padding: 2px 10px;
+}
+
+.navBar {
+    background-color: white;
+    width: 100px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 20px 60px;
+    height: 100vh;
+}
+
+.mainNav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 80vh;
+    margin-top: 20px;
+}
+
+.closeIcon {
+    margin: 0 auto;
+    display: block;
+    font-size: 30px;
+}
+
+.navBar span {
+    display: block;
+    text-align: center;
+}
+
+.home,
+.about,
+.contact,
+.project {
+    background-color: tomato;
+    padding: 15px 30px;
+    border-radius: 6px;
+
+}
+
+.icon {
+    margin: 0 auto;
+    display: block;
+}
+
+li a {
+    list-style: none;
+    color: white;
+    text-decoration: none;
+}
+
+/* .navbar {
     display: flex;
     height: 60px;
     align-items: center;
@@ -37,8 +99,8 @@ nav {
 }
 
 .navbar-nav {
-    /* display: flex; */
-    /* margin: 0 auto ; */
+    display: flex; 
+     margin: 0 auto ; 
 }
 
 .list li {
@@ -49,4 +111,4 @@ nav {
     list-style: none;
     color: white;
     text-decoration: none;
-}
+} */
