--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -1,7 +1,7 @@
 .home-area {
-    /* background: url("https://images.pexels.com/photos/7191989/pexels-photo-7191989.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") center center/cover no-repeat rgb(255, 255, 255); */
-    /* background-blend-mode: darken; */
-    background-color: whitesmoke;
+    background: url("https://images.pexels.com/photos/218863/pexels-photo-218863.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") center center/cover no-repeat rgba(4, 4, 4, 0.281);
+    background-blend-mode: darken;
+    /* background-color: whitesmoke; */
     max-height: 800px;
     height: 100VH;
     width: 100%;
@@ -16,24 +16,21 @@
     margin: 0 auto;
 }
 
-.home-area img {
-    width: 100%;
-    /* min-width: 200px; */
-    max-width: 500px;
-    height: auto;
-}
 
-.textarea{
+.textarea {
     display: flex;
     flex-direction: column;
 }
-.textarea span{
+
+.textarea span {
     font-size: 27px;
 }
-.textarea .name{
+
+.textarea .name {
     font-size: 85px;
     font-weight: 600;
 }
+
 .main-area {
 
     display: flex;
@@ -41,91 +38,41 @@
     height: 60vh;
     justify-content: center;
     /* width: 70vw; */
-     /* margin: 0 auto;  */
-     /* flex-direction: column;  */
-     /* align-items: center;  */
-     /* justify-content: flex-start;  */
-}
-.main-area div{
-margin-bottom: 10px;
+    /* margin: 0 auto;  */
+    /* flex-direction: column;  */
+    /* align-items: center;  */
+    /* justify-content: flex-start;  */
 }
 
-.wrapper {
-    display: inline-flex;
+.main-area div {
+    margin-bottom: 10px;
 }
 
-ul {
-    padding: 0;
-    margin: 0;
-}
-
-li {
-    list-style: none;
-}
-
-.static-txt {
-    color: black;
-    font-size: 44px;
-    font-weight: 400px;
-    /* font-size: ; */
-}
-.student{
-    margin-top: -2px;
-}
-.dynamic-txt {
-    height: 75px;
-    line-height: 75px;
-    overflow: hidden;
-    /* margin-top: -7px; */
-    margin-left: 10px;
-}
-
-.dynamic-txt li span {
-    letter-spacing: 2px;
-    position: relative;
-}
-
-.dynamic-txt li span {
-    color: #FC6D6D;
-    font-size: 44px;
-    font-weight: 500px;
-    position: relative;
-    top: 0;
-    animation: slide 4.5s steps(3) infinite;
-}
-
-@keyframes slide {
-    100% {
-        top: -270px;
-    }
-}
-
-.dynamic-txt li span::after {
-    content: "";
-    position: absolute;
-    height: 100%;
-    padding-bottom: 12px;
-    width: 100%;
-    left: 0;
-    background: whitesmoke;
-    border-left: 2px solid #fc6d6d;
-    animation: typing 1.5s steps(10) infinite;
-}
-
-
-
-@keyframes typing {
-    100% {
-        left: 100%;
-        margin: 0 -13px 0 13px;
-
-    }
-}
 
 .social-icons {
     display: flex;
     width: 150px;
     justify-content: space-between;
+}
+
+.text-box span {
+    font-size: 35px;
+}
+
+span {
+    color: white;
+}
+
+.staticTxt {
+    /* color: tomato; */
+}
+
+.dynamicTxt {
+    color: tomato;
+}
+
+li {
+    list-style: none;
 }
 
 .twitter {
@@ -150,7 +97,7 @@ li {
     font-size: 25px;
 }
 
-.hireButton button{
+.hireButton button {
     background: crimson;
     color: #fff;
     font-size: 25px;
@@ -161,8 +108,9 @@ li {
     cursor: pointer;
     border: 2px solid crimson;
 }
-.hireButton button:hover{
-    color: crimson;
+
+.hireButton button:hover {
+    color: white;
     background: none;
     font-weight: 600;
 }
