--- a/src/Components/About/SkillsArea.module.css
+++ b/src/Components/About/SkillsArea.module.css
@@ -34,8 +34,5 @@
 .certificateList li {
     list-style: square;
     margin-bottom: 7px;
+    color: black;
 }
-
-.certificateList a {}
-
-.certificateList a:hover {}
