--- a/client/src/Components/About/SkillsArea.module.css
+++ b/client/src/Components/About/SkillsArea.module.css
@@ -36,3 +36,11 @@
     margin-bottom: 7px;
     color: black;
 }
+
+@media screen and (max-width:1050px) {
+    .skills {
+        gap: 15px;
+        justify-content: center;
+    }
+
+}
