--- a/client/src/Pages/Home.module.css
+++ b/client/src/Pages/Home.module.css
@@ -119,3 +119,36 @@ li {
     width: 400px;
     height: auto;
 }
+
+@media screen and (max-width:1200px) {
+    .content {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .content {
+        flex-direction: column-reverse;
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .textarea span {
+        font-size: 20px;
+    }
+
+    .textarea .name {
+        font-size: 55px;
+    }
+
+    .text-box span {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .image-area img {
+        width: 300px;
+    }
+}
