--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
 
 body {
   margin: 0;
@@ -7,9 +8,5 @@ body {
 }
 
 body {
-  /* font-family: 'Roboto', sans-serif;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Source Sans Pro', sans-serif; */
-  /* font-family: 'Oswald', sans-serif; */
-  font-family: 'Mukta', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
